--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class = "jumbotron text-center"  >
+<div class = "jumbotron text-centergit"  >
   <h1> Welcome to Dev Match</h1>
   <h3> A membership site where entrepreneurs can meet developers.</h3>
 </div>
