Added Contact form page to main page

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -13,7 +13,9 @@
         </div>
 
         <div class ="form-group">
-          
+          <%= f.label :comments %>
+    
+  
         </div>
 
   <%= f.submit 'Submit', class: 'btn-btn-default' %>
